@@ -100,20 +100,19 @@ class DataTypeInfererTest {
 		assertThat(inferer.inferType(RelationUtils.createRelationString(RecordType.valueOf("testType"),"recordId3"))).isEqualTo(DataTypeMapping.RELATION);
 	}
 
-//	@Test
-//	void ambiguousConversions() {
-//		assertThat(inferer.inferType(List.of(true, "false", "True"), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_BOOLEAN);
-//		assertThat(inferer.inferType(List.of("11", "99"), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
-//		assertThat(inferer.inferType(List.of("11", new BigDecimal("99"), "foo"), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
-//		assertThat(inferer.inferType("", InBoundDataSource.TSV)).isEqualTo(DataTypeMapping.NULL);
-//		assertThat(inferer.inferType("", InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.STRING);
-//		assertThat(inferer.inferType(List.of(new BigInteger("11"), new BigInteger("99"), new BigDecimal("-3.14")), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_NUMBER);
-//		assertThat(inferer.inferType(List.of(new BigInteger("11"), new BigInteger("99"), new BigDecimal("-3.14"), "09"), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
-//		assertThat(inferer.inferType(Collections.emptyList(), InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.EMPTY_ARRAY);
-//		assertThat(inferer.inferType("[11, 99, -3.14, 09]", InBoundDataSource.TSV)).isEqualTo(DataTypeMapping.STRING);
-//		assertThat(inferer.inferType("[a]", InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.STRING);
-//		assertThat(inferer.inferType("[11, 99, -3.14, 09]", InBoundDataSource.JSON)).isEqualTo(DataTypeMapping.STRING);
-//	}
+	@Test
+	void ambiguousConversions() {
+		assertThat(inferer.inferType(List.of(true, "false", "True"))).isEqualTo(DataTypeMapping.ARRAY_OF_BOOLEAN);
+		assertThat(inferer.inferType(List.of("11", "99"))).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
+		assertThat(inferer.inferType(List.of("11", new BigDecimal("99"), "foo"))).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
+		assertThat(inferer.inferType("")).isEqualTo(DataTypeMapping.STRING);
+		assertThat(inferer.inferType(List.of(new BigInteger("11"), new BigInteger("99"), new BigDecimal("-3.14")))).isEqualTo(DataTypeMapping.ARRAY_OF_NUMBER);
+		assertThat(inferer.inferType(List.of(new BigInteger("11"), new BigInteger("99"), new BigDecimal("-3.14"), "09"))).isEqualTo(DataTypeMapping.ARRAY_OF_STRING);
+		assertThat(inferer.inferType(Collections.emptyList())).isEqualTo(DataTypeMapping.EMPTY_ARRAY);
+		assertThat(inferer.inferType("[11, 99, -3.14, 09]")).isEqualTo(DataTypeMapping.STRING);
+		assertThat(inferer.inferType("[a]")).isEqualTo(DataTypeMapping.STRING);
+		assertThat(inferer.inferType("[11, 99, -3.14, 09]")).isEqualTo(DataTypeMapping.STRING);
+	}
 
 	private static RecordAttributes getSomeAttrs() {
 		return new RecordAttributes(
